# loudgain

./: .gitignore  CMakeLists.txt  config.h  config.h.in
include/: loudgain.hpp  scan.hpp  tag.hpp
include/argparse/: argparse.hpp
src/: loudgain.cpp  main.cpp  scan.cpp  tag.cpp
